fixed z-index and hover issue with navbar

--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -38,7 +38,9 @@ h1 {
   line-height: 1.1;
 }
 
-
+a:hover {
+  color: var(--accent-color);
+}
 
 button {
   border-radius: 8px;
@@ -159,3 +161,4 @@ h3 {
     height: 55.5%
   }
 }
+
